--- a/Hakkimda.html
+++ b/Hakkimda.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <nav>
-            <a href="AnaSayfa.html">Ana Sayfa</a>
+            <a href="index.html">Ana Sayfa</a>
             <a href="Hakkimda.html">Hakkımda</a>
             <a href="Projelerim.html">Projelerim</a>
         </nav> <br> 
