--- a/Projelerim.html
+++ b/Projelerim.html
@@ -32,7 +32,7 @@
     <div class="overlay"></div>
     <div class="container">
         <nav>
-            <a href="AnaSayfa.html">Ana Sayfa</a>
+            <a href="index.html">Ana Sayfa</a>
             <a href="Hakkimda.html">Hakkımda</a>
             <a href="Projelerim.html">Projelerim</a>
         </nav>
