--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 
         <div class="social-container">
             <div class="social-links">
-                <a href="https://twitter.com/your_username" target="_blank"><img src="twitter.png" alt="Twitter"></a>
-                <a href="https://instagram.com/your_username" target="_blank"><img src="instagram.png" alt="Instagram"></a>
-                <a href="https://linkedin.com/in/your_username" target="_blank"><img src="linkedin-2.png" alt="LinkedIn"></a>
-                <a href="https://github.com/your_username" target="_blank"><img src="github.png" alt="GitHub"></a>
+                <a href="https://x.com/YasarYemre" target="_blank"><img src="twitter.png" alt="Twitter"></a>
+                <a href="https://www.instagram.com/yasarryunus/" target="_blank"><img src="instagram.png" alt="Instagram"></a>
+                <a href="https://www.linkedin.com/in/yunus-emre-yasar/" target="_blank"><img src="linkedin-2.png" alt="LinkedIn"></a>
+                <a href="https://github.com/yunussyasar" target="_blank"><img src="github.png" alt="GitHub"></a>
             </div>
         </div>
     </div>
